--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -330,6 +330,15 @@
                 @Html.ValidationMessageFor(model => model.ShowManufacturerPictures)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.HideCategoryDefaultPictures)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.HideCategoryDefaultPictures)
+				@Html.ValidationMessageFor(model => model.HideCategoryDefaultPictures)
+			</td>
+		</tr>
 
         <tr>
             <td class="adminTitle">
