Optimization of commit: Suppresses opening of a non existing link in a new window according to forum post 47526

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
@@ -254,10 +254,14 @@
 }
 
 .terms-of-service.alert {
-	padding-bottom: 4px !important;
-	a.read {
-		font-weight: bold;
-	}
+    padding-bottom: 4px !important;
+
+    a.read {
+        font-weight: bold;
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
 
 
