--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
@@ -32,9 +32,11 @@
                     @if (Model.ShowProductImages)
                     {
                         <figure class="picture pull-left">
-                            <a href="@item.ProductUrl" title="@item.Picture.Title">
-                                <img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
-                            </a>
+							@if(item.Picture.ImageUrl.HasValue())
+							{
+								<a href="@item.ProductUrl" title="@item.Picture.Title">
+									<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" /></a>
+							}
                         </figure>
                     }
                     <div class="quantity pull-left">
@@ -68,14 +70,17 @@
                     {
                         <div class="mb-bundle-pictures">
                             @for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
-                            {
-                                var bundleItem = item.BundleItems[j];
+							{
+								var bundleItem = item.BundleItems[j];
 
-                                <a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName">
-                                    <img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" /></a>
-                                
-                                if (bundlelength != (j + 1)) 
-                                { 
+								if (bundleItem.PictureUrl.HasValue())
+								{
+									<a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName">
+										<img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" /></a>
+								}
+
+								if (bundlelength != (j + 1))
+								{
                                     <i class="fa fa-plus"></i>
                                 }
                             }        
