--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -33,9 +33,12 @@
 
 <div class="pull-left" style="width:@leftContentWidth">
     <figure class="picture">
-        <a href="@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })" title="@Model.DefaultPictureModel.Title">
-            <img alt="@Model.DefaultPictureModel.AlternateText" src="@Model.DefaultPictureModel.ImageUrl" title="@Model.DefaultPictureModel.Title" />
-        </a>
+		@if (Model.DefaultPictureModel.ImageUrl.HasValue())
+		{
+			<a href="@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })" title="@Model.DefaultPictureModel.Title">
+				<img alt="@Model.DefaultPictureModel.AlternateText" src="@Model.DefaultPictureModel.ImageUrl" title="@Model.DefaultPictureModel.Title" />
+			</a>
+		}
         @if (Model.ColorAttributes.Any())
         {
             <div class="colors">
