--- a/src/Presentation/SmartStore.Web/Views/Product/_ProductTemplate.Grouped.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_ProductTemplate.Grouped.AssociatedProduct.cshtml
@@ -9,8 +9,11 @@
 		@if (!String.IsNullOrWhiteSpace(Model.DetailsPictureModel.DefaultPictureModel.ImageUrl))
 		{
 			<div class="variant-picture dynamic-image equalized-column" data-equalized-column-name="pd">
-				<img alt="@Model.DetailsPictureModel.AlternateText" src="@Model.DetailsPictureModel.DefaultPictureModel.ImageUrl"
-					 title="@Model.DetailsPictureModel.DefaultPictureModel.Title" />
+				@if (Model.DetailsPictureModel.DefaultPictureModel.ImageUrl.HasValue())
+				{
+					<img alt="@Model.DetailsPictureModel.AlternateText" src="@Model.DetailsPictureModel.DefaultPictureModel.ImageUrl"
+						 title="@Model.DetailsPictureModel.DefaultPictureModel.Title" />
+				}
 			</div>
 		}
 
