Resolves #436 Make %Order.Product(s)% token to display a product thumbnail

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -61,6 +61,15 @@
                 @Html.ValidationMessageFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.MessageProductThumbPictureSize)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.MessageProductThumbPictureSize)
+				@Html.ValidationMessageFor(model => model.MessageProductThumbPictureSize)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.ProductDetailsPictureSize)
