--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -97,6 +97,7 @@
     @*This is used so that themes can inject content into the header*@
     @Html.Partial("Head")
 
+	@Html.SmartMetaRobots()
 	@Html.MetaAcceptLanguage()
     @Html.Partial("_ClientRes")
 
