--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminRoot.cshtml
@@ -3,15 +3,15 @@
 @using SmartStore.Web.Framework.UI;
 
 @{
-    var currentUICulture = System.Threading.Thread.CurrentThread.CurrentUICulture;
-    
-    // page title
-    string adminPageTitle = "";
-    if (!string.IsNullOrWhiteSpace(ViewBag.Title))
-    {
-        adminPageTitle = ViewBag.Title + " / ";
-    }
-    adminPageTitle += T("Admin.PageTitle").Text;
+	var currentUICulture = System.Threading.Thread.CurrentThread.CurrentUICulture;
+
+	// page title
+	string adminPageTitle = "";
+	if (!string.IsNullOrWhiteSpace(ViewBag.Title))
+	{
+		adminPageTitle = ViewBag.Title + " / ";
+	}
+	adminPageTitle += T("Admin.PageTitle").Text;
 
 	// add css assets
 	var telerikCssRootPath = "~/Content/2012.2.607/";
@@ -22,75 +22,76 @@
 		"~/Content/jquery.pnotify.default.icons.css",
 		"~/Administration/Content/theme.less");
 
-    // add js assets (Head)
-    Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-2.7.2.js",
+	// add js assets (Head)
+	Html.AppendScriptParts(ResourceLocation.Head,
+		"~/Scripts/modernizr-2.7.2.js",
 		// Telerik doesn't like jQuery 1.9+, a shame!
-        "~/Administration/Scripts/jquery-1.8.3.js",
-        "~/Scripts/globalize/globalize.js",
+		"~/Administration/Scripts/jquery-1.8.3.js",
+		"~/Scripts/globalize/globalize.js",
 		"~/Scripts/smartstore.globalize.adapter.js");
-        
-    Html.AddScriptParts(ResourceLocation.Head, true,
-        "~/Scripts/globalize/cultures/globalize.culture.{0}.js".FormatInvariant(currentUICulture.ToString()));
 
-    // add js assets (Foot)
-    var bootstrapJsRoot = "~/Content/bootstrap/js/";
-    Html.AppendScriptParts(ResourceLocation.Foot,
-        // jQuery UI Core
-        "~/Scripts/jquery-ui/effect.js",
-        "~/Scripts/jquery-ui/effect-transfer.js",
-        "~/Scripts/jquery-ui/effect-shake.js",
-        "~/Scripts/jquery-ui/position.js",
-        // jQuery Validation
-        "~/Scripts/jquery.unobtrusive-ajax.js",
-        "~/Scripts/jquery.validate.js",
-        "~/Scripts/jquery.validate.unobtrusive.js",
-        // SmartStore system
-        "~/Scripts/smartstore.system.js",
-        "~/Scripts/underscore.js",
-        "~/Scripts/underscore.string.js",
-        "~/Scripts/underscore.mixins.js",
-        "~/Scripts/smartstore.jquery.utils.js",
-        "~/Scripts/jquery.ba-outside-events.js",
-        "~/Scripts/jquery.preload.js",
-        "~/Scripts/jquery.transit.js",
-        "~/Scripts/jquery.menu-aim.js",
-        "~/Scripts/smartstore.doAjax.js",
-        "~/Scripts/jquery.addeasing.js",
-        "~/Scripts/smartstore.eventbroker.js",
-        "~/Scripts/smartstore.hacks.js",
+	Html.AddScriptParts(ResourceLocation.Head, true,
+		"~/Scripts/globalize/cultures/globalize.culture.{0}.js".FormatInvariant(currentUICulture.ToString()));
+
+	// add js assets (Foot)
+	var bootstrapJsRoot = "~/Content/bootstrap/js/";
+	Html.AppendScriptParts(ResourceLocation.Foot,
+		// jQuery UI Core
+		"~/Scripts/jquery-ui/effect.js",
+		"~/Scripts/jquery-ui/effect-transfer.js",
+		"~/Scripts/jquery-ui/effect-shake.js",
+		"~/Scripts/jquery-ui/position.js",
+		// jQuery Validation
+		"~/Scripts/jquery.unobtrusive-ajax.js",
+		"~/Scripts/jquery.validate.js",
+		"~/Scripts/jquery.validate.unobtrusive.js",
+		// SmartStore system
+		"~/Scripts/smartstore.system.js",
+		"~/Scripts/underscore.js",
+		"~/Scripts/underscore.string.js",
+		"~/Scripts/underscore.mixins.js",
+		"~/Scripts/smartstore.jquery.utils.js",
+		"~/Scripts/jquery.ba-outside-events.js",
+		"~/Scripts/jquery.preload.js",
+		"~/Scripts/jquery.transit.js",
+		"~/Scripts/jquery.menu-aim.js",
+		"~/Scripts/smartstore.doAjax.js",
+		"~/Scripts/smartstore.entityPicker.js",
+		"~/Scripts/jquery.addeasing.js",
+		"~/Scripts/smartstore.eventbroker.js",
+		"~/Scripts/smartstore.hacks.js",
 		"~/Scripts/smartstore.common.js",
-        // Bootstrap
-        bootstrapJsRoot + "bootstrap-transition.js",
-        bootstrapJsRoot + "bootstrap-alert.js",
-        bootstrapJsRoot + "bootstrap-button.js",
-        bootstrapJsRoot + "bootstrap-collapse.js",
-        bootstrapJsRoot + "bootstrap-dropdown.js",
-        bootstrapJsRoot + "bootstrap-modal.js",
-        bootstrapJsRoot + "bootstrap-tooltip.js",
-        bootstrapJsRoot + "bootstrap-popover.js",
-        bootstrapJsRoot + "bootstrap-tab.js",
+		// Bootstrap
+		bootstrapJsRoot + "bootstrap-transition.js",
+		bootstrapJsRoot + "bootstrap-alert.js",
+		bootstrapJsRoot + "bootstrap-button.js",
+		bootstrapJsRoot + "bootstrap-collapse.js",
+		bootstrapJsRoot + "bootstrap-dropdown.js",
+		bootstrapJsRoot + "bootstrap-modal.js",
+		bootstrapJsRoot + "bootstrap-tooltip.js",
+		bootstrapJsRoot + "bootstrap-popover.js",
+		bootstrapJsRoot + "bootstrap-tab.js",
 		bootstrapJsRoot + "bootstrap-typeahead.js",
-        // Bootstrap custom
-        bootstrapJsRoot + "custom/bootstrap-datetimepicker.js",
-        // Shared UI
-        "~/Scripts/smartstore.placeholder.js",
-        "~/Scripts/select2.js",
-        "~/Scripts/smartstore.selectwrapper.js",
-        "~/Scripts/smartstore.throbber.js",
-        "~/Scripts/smartstore.navbar.js",
-        "~/Scripts/smartstore.thumbzoomer.js",
-        "~/Scripts/smartstore.column-equalizer.js",
-        "~/Scripts/smartstore.shrinkmenu.js",
-        "~/Scripts/smartstore.scrollbutton.js",
-        "~/Scripts/smartstore.tabselector.js",
-        "~/Scripts/jquery.pnotify.js",
-        "~/Scripts/jquery.scrollTo.js",
-        "~/Scripts/jquery.serialScroll.js",
+		// Bootstrap custom
+		bootstrapJsRoot + "custom/bootstrap-datetimepicker.js",
+		// Shared UI
+		"~/Scripts/smartstore.placeholder.js",
+		"~/Scripts/select2.js",
+		"~/Scripts/smartstore.selectwrapper.js",
+		"~/Scripts/smartstore.throbber.js",
+		"~/Scripts/smartstore.navbar.js",
+		"~/Scripts/smartstore.thumbzoomer.js",
+		"~/Scripts/smartstore.column-equalizer.js",
+		"~/Scripts/smartstore.shrinkmenu.js",
+		"~/Scripts/smartstore.scrollbutton.js",
+		"~/Scripts/smartstore.tabselector.js",
+		"~/Scripts/jquery.pnotify.js",
+		"~/Scripts/jquery.scrollTo.js",
+		"~/Scripts/jquery.serialScroll.js",
 		"~/Scripts/jquery.sortable.js",
-        // Admin
-        "~/Administration/Scripts/admin.common.js",
-        "~/Administration/Scripts/admin.globalinit.js");
+		// Admin
+		"~/Administration/Scripts/admin.common.js",
+		"~/Administration/Scripts/admin.globalinit.js");
 }
 <!DOCTYPE html>
 <html class="no-js not-ready loading">
