Further implementation of the entity picker

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -497,3 +497,8 @@ th label {
 	font-size: 30px;
 	text-shadow: none;
 }
+
+.modal-large {
+	width: 800px !important;
+	margin: -250px 0 0 -400px !important;
+}
