--- a/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
@@ -1,24 +1,118 @@
 ﻿@model EntityPickerModel
 @using SmartStore.Web.Models.Common;
 
-<div id="entity-picker-@(Model.Entity)-dialog" class="modal modal-large hide fade" tabindex="-1">
+<div id="entity-picker-@(Model.Entity)-dialog" class="entity-picker modal modal-large hide fade" tabindex="-1">
 	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
+		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
 		<h4 class="caption">&nbsp;</h4>
 	</div>
 	<div class="modal-body">
-		@if (Model.Entity.IsCaseInsensitiveEqual("product"))
-		{
-			@BodyForProducts()
-		}
+		<form method="POST" action="@Url.Action("EntityPicker", "Common", new { area = "" })">
+			<input type="hidden" name="Entity" value="@Model.Entity" />
+			<input type="hidden" name="PageIndex" value="@Model.PageIndex" />
+
+			@if (Model.Entity.IsCaseInsensitiveEqual("product"))
+			{
+				@ProductSearchForm()
+			}
+
+			<div class="entity-picker-list"></div>
+		</form>
 	</div>
 	<div class="modal-footer">
+		<span class="footer-note pull-left hide">TODO: note for entity selection here!</span>
 		<button class="btn btn-primary">@T("Common.OK")</button>
 		<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
 	</div>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			var dialog = $('#entity-picker-@(Model.Entity)-dialog');
+
+			// search entities
+			dialog.find('button[name=SearchEntities]').click(function (e) {
+				e.preventDefault();
+				var button = $(this);
+				button.button('loading').prop('disabled', true);
+
+				button.closest('form').doAjax({
+					type: 'POST',
+					smallIcon: dialog.find('.entity-picker-list:first'),
+					callbackSuccess: function (response) {
+						dialog.find('.entity-picker-list:first').append(response);
+						dialog.find('.footer-note').show();
+						$('#entity-picker-@(Model.Entity)-filter').slideUp();
+					},
+					callbackComplete: function () {
+						button.prop('disabled', false).button('reset');
+					}
+				});
+				return false;
+			});
+
+			// enter starts searching
+			dialog.find('input.entity-picker-searchterm').keydown(function (e) {
+				if (e.keyCode == 13) {
+					e.preventDefault();
+					dialog.find('button[name=SearchEntities]').click();
+					return false;
+				}
+			});
+
+			// toggle filters
+			dialog.find('button[name=FilterEntities]').click(function () {
+				$('#entity-picker-@(Model.Entity)-filter').slideToggle();
+			});
+		});
+	</script>
 </div>
 
-@helper BodyForProducts()
+@helper ProductSearchForm()
 {
-	
+	<div class="form-horizontal">
+		<div class="control-group">
+			@Html.LabelFor(model => model.ProductName, new { @class = "control-label", @for = "ProductName" })
+			<div class="controls">
+				@Html.TextBoxFor(model => model.ProductName, new { @class = "entity-picker-searchterm" })
+				<button type="button" class="btn btn-warning" name="SearchEntities" data-loading-text="@(T("Common.Loading"))&hellip;">
+					<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
+				</button>
+				<button type="button" class="btn" name="FilterEntities">
+					<i class="fa fa-filter"></i>&nbsp;@T("Common.Filter")
+				</button>
+			</div>
+		</div>
+
+		<div id="entity-picker-@(Model.Entity)-filter" class="hide">
+			<div class="control-group">
+				@Html.LabelFor(model => model.CategoryId, new { @class = "control-label", @for = "CategoryId" })
+				<div class="controls">
+					@Html.DropDownListFor(model => model.CategoryId, Model.AvailableCategories, Model.AllString, new { style = "min-width: 320px" })
+				</div>
+			</div>
+
+			<div class="control-group">
+				@Html.LabelFor(model => model.ManufacturerId, new { @class = "control-label", @for = "ManufacturerId" })
+				<div class="controls">
+					@Html.DropDownListFor(model => model.ManufacturerId, Model.AvailableManufacturers, Model.AllString, new { style = "min-width: 320px" })
+				</div>
+			</div>
+
+			@if (Model.AvailableStores.Count > 1)
+			{
+				<div class="control-group">
+					@Html.LabelFor(model => model.StoreId, new { @class = "control-label", @for = "StoreId" })
+					<div class="controls">
+						@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores, Model.AllString, new { style = "min-width: 320px" })
+					</div>
+				</div>
+			}
+
+			<div class="control-group">
+				@Html.LabelFor(model => model.ProductTypeId, new { @class = "control-label", @for = "ProductTypeId" })
+				<div class="controls">
+					@Html.DropDownListFor(model => model.ProductTypeId, Model.AvailableProductTypes, Model.AllString, new { style = "min-width: 320px" })
+				</div>
+			</div>
+		</div>
+	</div>
 }
