Entity picker: list rendering, list increasing, search term highlighting, item selection, thumb zoom option...

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -80,7 +80,7 @@
 
                             $('#EntityPickerTest').click(function () {
 
-                            	$({}).entityPicker({
+                            	$({}).entityPicker('loadDialog', {
                             		url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
                             		caption: '@T("Admin.Catalog.Products.AssociatedProducts.AddNew")'
                             	});
