--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -13,7 +13,8 @@
 	Html.AppendCssFileParts(
 		"~/Content/font-awesome.css",
 		"~/Content/jquery.pnotify.default.css",
-		"~/Content/jquery.pnotify.default.icons.css");
+		"~/Content/jquery.pnotify.default.icons.css",
+		"~/Content/smartstore.entitypicker.css");
 
 	Html.AppendScriptParts(ResourceLocation.Head,
 		"~/Scripts/modernizr-2.7.2.js",
