--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminRoot.cshtml
@@ -20,6 +20,7 @@
 		telerikCssRootPath + "telerik.common.css",
 		"~/Content/jquery.pnotify.default.css",
 		"~/Content/jquery.pnotify.default.icons.css",
+		"~/Content/smartstore.entitypicker.css",
 		"~/Administration/Content/theme.less");
 
 	// add js assets (Head)
