--- a/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/EntityPicker.cshtml
@@ -19,8 +19,8 @@
 			{
 				@ProductSearchForm()
 			}
-
-			<div class="entity-picker-list clearfix"></div>
+			<div class="clear"></div>
+			<div class="entity-picker-list"></div>
 		</form>
 	</div>
 	<div class="modal-footer">
